show hash in transaction list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="lbl_timestamp">Timestamp</string>
     <string name="lbl_nonce">Nonce</string>
+    <string name="lbl_hash">Hash</string>
 
 </resources>
